--- a/web-app/templates/base.html
+++ b/web-app/templates/base.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    {% block header %}{% endblock %}
+
+    {% include 'header.html' %}
     <div class="container">
         {% block body %}{% endblock %}
     </div>
