--- a/web-app/templates/base.html
+++ b/web-app/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}ALT Text Validator{% endblock %}</title>
+    <link rel="shortcut icon" href="./static/images/qainfotech_fav.jpg" type="image/x-icon">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
