--- a/web-app/templates/header.html
+++ b/web-app/templates/header.html
@@ -1,8 +1,9 @@
 {% block header %}
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="navbar-header">
-        <img class="navbar-brand" src="./static/images/qainfotech_logo_new.jpg" alt="QA Infotech Logo"> {% if session['logged_in']
-        %}
+        <a href="/">
+            <img class="navbar-brand" src="./static/images/qainfotech_logo_new.jpg" alt="QA Infotech Logo"></a>
+             {% if session['logged_in'] %}
         <div class="welcome-banner">
             <div> Welcome Prashant</div>
             <a href="/logout">Logout</a>
