--- a/web-app/templates/login.html
+++ b/web-app/templates/login.html
@@ -21,7 +21,15 @@
 				<div class="control-group">
 					<input type="password" class="login-field" value="" placeholder="password" name="password">
 					<label class="login-field-icon fui-lock" for="login-pass"></label>
+					{% with messages = get_flashed_messages() %} 
+						{% if messages %} 
+							{% for message in messages %}
+								<div class="errormessage">{{ message }}</div>
+							{% endfor %} 
+						{% endif %} 
+					{% endwith %}
 				</div>
+
 
 				<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block">
 				<br>
