--- a/web-app/static/css/style.css
+++ b/web-app/static/css/style.css
@@ -115,6 +115,33 @@ input:focus {
   align-content: center
 }
 
-.errormessage{
+.errormessage {
   color: red
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  /* width: 90%; */
+  border: 5px solid #dddddd;
+  padding: 10px;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: center
+}
+
+tr:nth-child(odd) {
+  background-color: #777
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd
+}
+
+tr:first-child{
+  background-color: black;
+  color: #dddddd
 }
