get vicinity text

--- a/web-app/templates/resultpage.html
+++ b/web-app/templates/resultpage.html
@@ -12,6 +12,7 @@
             <td style="text-align: left">
                 <p>IMAGE URL: {{ imagedetails.src }}</p>
                 <p>ALT TEXT: {{ imagedetails.alt }}</p>
+                <p>Relevant TEXT: {{ imagedetails.vicinity_text}}</p>
             </td>
         </tr>
         {% endfor %}
