Added new colums to the search page and no image error

--- a/web-app/static/css/style.css
+++ b/web-app/static/css/style.css
@@ -116,7 +116,8 @@ input:focus {
 }
 
 .errormessage {
-  color: red
+  color: red;
+  text-align: center
 }
 
 table {
@@ -144,4 +145,8 @@ tr:nth-child(even) {
 tr:first-child{
   background-color: black;
   color: #dddddd
+}
+
+.img-transform:hover {
+  transform: scale(2.5);
 }
