--- a/web-app/templates/homepage.html
+++ b/web-app/templates/homepage.html
@@ -11,7 +11,14 @@
 			<div class="control-group">
 				<input type="text" class="test-url" value="" placeholder="test website URL" name="test-url">
 				<label class="login-field-icon fui-user" for="login-name"></label>
-			</div>
+			{% with messages = get_flashed_messages() %} 
+				{% if messages %} 
+					{% for message in messages %}
+						<div class="errormessage">{{ message }}</div>
+					{% endfor %} 
+				{% endif %} 
+			{% endwith %}
+		</div>
 			<input type="submit" value="Go" class="btn btn-primary btn-large btn-block">
 			<br>
 		</div>
