--- a/web-app/templates/homepage.html
+++ b/web-app/templates/homepage.html
@@ -11,18 +11,20 @@
 			<div class="control-group">
 				<input type="text" class="test-url" value="" placeholder="test website URL" name="test-url">
 				<label class="login-field-icon fui-user" for="login-name"></label>
-			{% with messages = get_flashed_messages() %} 
-				{% if messages %} 
-					{% for message in messages %}
-						<div class="errormessage">{{ message }}</div>
-					{% endfor %} 
-				{% endif %} 
-			{% endwith %}
-		</div>
-			<input type="submit" value="Go" class="btn btn-primary btn-large btn-block">
+				{% with messages = get_flashed_messages() %}
+				{% if messages %}
+				{% for message in messages %}
+				<div class="errormessage">{{ message }}</div>
+				{% endfor %}
+				{% endif %}
+				{% endwith %}
+			</div>
+
+
+			<input type="submit" value="Test Alt Text Relevancy" class="btn btn-primary btn-large btn-block">
+
 			<br>
 		</div>
-	</div>
 </form>
 
 {% endblock%}
