--- a/web-app/templates/resultpage.html
+++ b/web-app/templates/resultpage.html
@@ -5,7 +5,7 @@
         <tr>
             <th>Image</th>
             <th>Actual ALT Text</th>
-            <th>Is ALT Relevant</th>
+            <th>ALT Text Relevancy Status?</th>
             <th>Recommendations</th>
         </tr>
         {% for image, imagedetails in data.items() %}
@@ -15,10 +15,10 @@
             </td>
             <td style="text-align: left">
                 <!-- <a href="{{ imagedetails.src }}">{{ imagedetails.src }}</a> -->
-                <p>ALT TEXT: {{ imagedetails.alt }}</p>
+                <p>{{ imagedetails.alt }}</p>
             </td>
             <td style="text-align: left">
-                <p>{{ imagedetails.classes.result}}</p>
+                <p style="color: {{ imagedetails.classes.result}}">{{ imagedetails.classes.result}}</p>
             </td>
             <td style="text-align: left">
                 {% for texts in imagedetails.classes.possible_texts %}
