--- a/web-app/templates/resultpage-alt.html
+++ b/web-app/templates/resultpage-alt.html
@@ -6,7 +6,6 @@
             <th>Image</th>
             <th>Actual ALT Text</th>
             <th>ALT Text Relevancy Status?</th>
-            <th>Recommendations</th>
         </tr>
         {% for image, imagedetails in data.items() %}
         <tr>
@@ -17,13 +16,8 @@
                 <!-- <a href="{{ imagedetails.src }}">{{ imagedetails.src }}</a> -->
                 <p>{{ imagedetails.alt }}</p>
             </td>
-            <td style="text-align: left">
-                <p style="color: {{imagedetails.classes.result}}">{{imagedetails.classes.result}}</p>
-            </td>
-            <td style="text-align: left">
-                {% for texts in imagedetails.classes.possible_texts %}
-                <p> use: {{texts.Entity}} with {{texts.confidence}} % confidence </p>
-                {% endfor %}
+            <td style="text-align: center">
+                <p style="color: green">GREEN</p>
             </td>
             </td>
         </tr>
