Supreesed numpy warning

--- a/web-app/templates/resultpage-alt.html
+++ b/web-app/templates/resultpage-alt.html
@@ -5,7 +5,7 @@
         <tr>
             <th>Image</th>
             <th>Actual ALT Text</th>
-            <th>ALT Text Relevancy Status?</th>
+            <th>Is Alt Text Relevant?</th>
         </tr>
         {% for image, imagedetails in data.items() %}
         <tr>
