--- a/web-app/templates/resultpage.html
+++ b/web-app/templates/resultpage.html
@@ -5,7 +5,7 @@
         <tr>
             <th>Image</th>
             <th>Actual ALT Text</th>
-            <th>ALT Text Relevancy Status?</th>
+            <th>Is Alt Text Relevant?</th>
             <th>Recommendations</th>
         </tr>
         {% for image, imagedetails in data.items() %}
@@ -17,7 +17,7 @@
                 <!-- <a href="{{ imagedetails.src }}">{{ imagedetails.src }}</a> -->
                 <p>{{ imagedetails.alt }}</p>
             </td>
-            <td style="text-align: left">
+            <td style="text-align: center">
                 <p style="color: {{imagedetails.classes.result}}">{{imagedetails.classes.result}}</p>
             </td>
             <td style="text-align: left">
