--- a/web-app/templates/resultpage.html
+++ b/web-app/templates/resultpage.html
@@ -8,10 +8,10 @@
             <th>Is Alt Text Relevant?</th>
             <th>Recommendations</th>
         </tr>
-        {% for image, imagedetails in data.items() %}
+        {% for imagedetails in data%}
         <tr>
             <td>
-                <img class="img-transform" height="100px" src="./static/images/retrieved_images/image_{{ image }}.jpg?{{ imagedetails.current_time }}">
+                <img class="img-transform" height="100px" src="{{imagedetails.src}}">
             </td>
             <td style="text-align: left">
                 <!-- <a href="{{ imagedetails.src }}">{{ imagedetails.src }}</a> -->
@@ -30,11 +30,11 @@
         {% endfor %}
     </table>
 </div>
-<form action="/search" method="POST">
+<!-- <form action="/search" method="POST">
     <div class="test-url-screen">
         <div class="login-screen">
             {% include 'searchpage.html' %}
             <br>
         </div>
-</form>
+</form> -->
 {% endblock%}
