--- a/web-app/templates/base.html
+++ b/web-app/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="./static/images/qainfotech_fav.jpg" type="image/x-icon">
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+
 </head>
 
 <body>
@@ -21,6 +22,23 @@
     </div>
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script>
+       function DisplayTheModelDropdown(event)
+       {   
+          if(document.getElementById("MethodOptions").value==2)
+          {   
+              document.querySelector("[for='model']").hidden=false
+              document.getElementById("ModelOption").hidden=false
+          }
+          else
+        {
+            document.getElementById("ModelOption").value=1;
+            document.getElementById("ModelOption").hidden=true
+            document.querySelector("[for='model']").hidden=true
+        }   
+       }
+        
+        </script>
 </body>
 
 </html>
