--- a/web-app/templates/resultpage.html
+++ b/web-app/templates/resultpage.html
@@ -11,7 +11,7 @@
         {% for imagedetails in data%}
         <tr>
             <td>
-                <img class="img-transform" height="100px" width="100px" src="{{imagedetails.src}}">
+                <img class="img-transform" height="100px" width="100px" src="{{imagedetails.src}}" style="transition: all 400ms ease">
             </td>
             <td style="text-align: left">
                 <!-- <a href="{{ imagedetails.src }}">{{ imagedetails.src }}</a> -->
