--- a/web-app/templates/resultpage.html
+++ b/web-app/templates/resultpage.html
@@ -21,9 +21,40 @@
                 <p style="color: {{imagedetails.classes.result}}">{{imagedetails.classes.result}}</p>
             </td>
             <td style="text-align: left">
-                {% for texts in imagedetails.classes.possible_texts %}
-                <p> use: {{texts.Entity}} with {{texts.confidence}} % confidence </p>
-                {% endfor %}
+                <div class="container">
+
+                    <div  style="width: 250px;" class="well">
+                        <a id="toggler" href="#" data-toggle="collapse" class="list-group-item text-info font-weight-bold text-center" data-target="#demo">
+                            Image Entities
+                        </a>
+
+                        <div id="demo" class="collapse in">
+                            <ul class="list-group">
+                            {% for texts in imagedetails.classes.image_entity %}
+                                <li class="list-group-item text-left" style="width: 250px;">{{texts.Entity}}<span class="badge float-right" style="margin-left:1px;border: 2px solid gray;border-radius: 25px;">{{texts.confidence}}</span> </li>
+                            {% endfor %}
+                        </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div  style="width: 250px;" class="well">
+                        <a id="toggler2" href="#" data-toggle="collapse" class="list-group-item text-info font-weight-bold text-center" data-target="#demo-2">
+                            Image Web-Entities
+                        </a>
+
+                        <div id="demo-2" class="collapse in">
+                                <ul class="list-group">
+                            {% for texts in imagedetails.classes.image_web_entity %}
+                            
+                                <li class="list-group-item text-left" style="width: 250px;" >{{texts.Entity}}<span class="badge float-right" style="margin-left:1px;border: 2px solid gray;border-radius: 25px;">{{texts.confidence}}</li>
+                            
+                            {% endfor %}
+                        </ul>
+                        </div>
+                    </div>
+                </div>
+
             </td>
             </td>
         </tr>
