--- a/web-app/templates/resultpage.html
+++ b/web-app/templates/resultpage.html
@@ -24,11 +24,11 @@
                 <div class="container">
 
                     <div  style="width: 250px;" class="well">
-                        <a id="toggler" href="#" data-toggle="collapse" class="list-group-item text-info font-weight-bold text-center" data-target="#demo">
-                            Image Entities
+                        <a id="toggler" href="#" data-toggle="collapse" class="list-group-item text-info font-weight-bold text-center" data-target="#data-{{ loop.index }}">
+                            Image Indentified
                         </a>
 
-                        <div id="demo" class="collapse in">
+                        <div id="data-{{ loop.index }}" class="collapse in">
                             <ul class="list-group">
                             {% for texts in imagedetails.classes.image_entity %}
                                 <li class="list-group-item text-left" style="width: 250px;">{{texts.Entity}}<span class="badge float-right" style="margin-left:1px;border: 2px solid gray;border-radius: 25px;">{{texts.confidence}}</span> </li>
@@ -37,13 +37,15 @@
                         </div>
                     </div>
                 </div>
+                    
                 <div class="container">
+                        
                     <div  style="width: 250px;" class="well">
-                        <a id="toggler2" href="#" data-toggle="collapse" class="list-group-item text-info font-weight-bold text-center" data-target="#demo-2">
-                            Image Web-Entities
+                        <a id="toggler2" href="#" data-toggle="collapse" class="list-group-item text-info font-weight-bold text-center" data-target="#dataWeb-{{ loop.index }}">
+                            Web-Results
                         </a>
 
-                        <div id="demo-2" class="collapse in">
+                        <div id="dataWeb-{{ loop.index }}" class="collapse in">
                                 <ul class="list-group">
                             {% for texts in imagedetails.classes.image_web_entity %}
                             
