Added image count to improve response time

--- a/web-app/templates/homepage.html
+++ b/web-app/templates/homepage.html
@@ -17,6 +17,8 @@
 					  <br>
 					  <input  name="height" type="text" id="Threshold" class="form-control" placeholder="minimum height of Image(Default is 50px) ">
 					  <br>
+					  <input  name="imageCount" type="text" id="Threshold" class="form-control" placeholder="maximum number of Images to test (Default is 4) ">
+					  <br>
 					  <label class="mr-sm-2" for="model" style="position: relative;left: 100px">Choose the Model(Default is DenseNet)</label>
 					  <select name="model" class="custom-select mr-sm-2" id="ModelOption">
 							<option value="1" selected>DenseNet</option>
